--- a/css/grid.css
+++ b/css/grid.css
@@ -1,22 +1,5 @@
-@media (min-width: 758px){
-    .grid-1{ width: 6.5%;}
-    .grid-2{ width: 15%;}
-    .grid-3{ width: 23.5%;}
-    .grid-4{ width: 32%;}
-    .grid-5{ width: 40.5%;}
-    .grid-6{ width: 49%;}
-    .grid-7{ width: 57.5%;}
-    .grid-8{ width: 66%;}
-    .grid-9{ width: 74.5%;}
-    .grid-10{ width: 83%;}
-    .grid-11{ width: 91.5%;}
-    .grid-12{ width: 100%;}
-    
-    
-}
 
-
-.grid-container{
+.row{
     padding-left: 10px;
     padding-right: 10px;
     margin-left: auto;
@@ -24,24 +7,52 @@
     
     
 }
+img {
+    width: 100%;
+}
 
-
-.grid-container > [class^="grid-"]{
+@media (min-width: 768px){
+    
+.row > [class^="column-"]{
     float: left;
     min-height: 1px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-left: 2%;
+    margin-left: 1%;
+      
+}
+
+.row > [class^="column-"]:first-child{margin-left:0;}
+.row > [class^="column-"]:last-child{float:right; margin-left: 0;}
+    
+    
+    
+    
+    
+    
+    .column-1{ width: 6.5%;}
+    .column-2{ width: 15%;}
+    .column-3{ width: 23.5%;}
+    .column-4{ width: 32%;}
+    .column-5{ width: 40.5%;}
+    .column-6{ width: 49%;}
+    .column-7{ width: 57.5%;}
+    .column-8{ width: 66%;}
+    .column-9{ width: 74.5%;}
+    .column-10{ width: 83%;}
+    .column-11{ width: 91.5%;}
+    .column-12{ width: 100%;}
     
     
 }
 
-.grid-container >[class^"grid-"]:first-child{margin-left:0;}
-.grid-container >[class^"grid-"]:last-child{margin-left:0;}
+
+
+
 
 .clearfix:after,
-.grid-container:after{
-    content: " "
+.row:after{
+    content: " ";
     display: table;
     clear: both;
     
