--- a/css/grid.css
+++ b/css/grid.css
@@ -1,9 +1,14 @@
 
+*{
+      box-sizing: border-box;
+
+    
+}
 .row{
     padding-left: 10px;
     padding-right: 10px;
     margin-left: auto;
-    margi-right: auto;
+    margin-right: auto;
     
     
 }
@@ -18,7 +23,7 @@ img {
     min-height: 1px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-left: 1%;
+    margin-left: 2%;
       
 }
 
