--- a/css/Style.css
+++ b/css/Style.css
@@ -1,25 +1,35 @@
 html {
-box-sizing: border-box;
-color: white;
-font-family: 'Bangers', cursive;
-font-size: 18px;
-font-size: 1.5em;
-}
+    box-sizing: border-box;
+    color: white;
+    font-size: 18px;
+    font-size: 1.5em;
+font-family: 'Righteous', cursive;
 
+}
+p{
+    font-family: Rockwell;
+    line-height: 1.3em;
+}
 
 body{
 margin: 0;   
 background: #333;
 }
-
-
-@media (min-width: 1px) and (max-width: 799px){
+/*==============Header==============*/
     header img{
-        height: 60%;
-        width: 90%;
-        margin-left: 5%;
-
+        margin-left: 12%;
+        height: 50%;
+        width: 70%;
     }
+    header section{
+    width: 90%;
+    height: 100%;
+    background: url(../Img/madmax.jpg) no-repeat center;
+    background-size: cover;
+    margin-left: 5%;    
+    }
+
+
     /*=============Navigation+==========*/
         nav{
             padding-right: 9%;
@@ -37,30 +47,56 @@ background: #333;
         box-shadow: 8px 7px #aaa;
         margin-bottom: 3%;
         padding: 1.2 em;
-    }
+        }
         li a:link{
         color:white;
         text-decoration: none;
+        display: block;
     }
     li a:visited{
         color:white;
     }
     li a:hover{
-            text-shadow: 10px 3px #35b0e6;
+            text-shadow: 5px 3px #35b0e6;
     }
 /*==============Content===============*/
-    .wrapper h2:first-child{
-        margin:10% 0 -1% 5%;
+    .sidebar{
+        margin-top: 30%;
+       
+        margin-right: 10%;
+        text-shadow: 2px 2px #35b0e6;
+
         
+    }
+    .sidebar ul{
+        list-style-type: square;
+        font-size: 1em;
+        font-family: Rockwell;
+    }
+    .sidebar h3{
+        border-bottom: 5px solid #35b0e6;
+        background: #35b0e6;
+        box-shadow: 5px 5px #aaa;
+        padding-left: 5%;
+        font-size: 1.1em
+    }
+    .wrapper h2:first-child{
+            margin:10% 0 -1% 5%;
+            text-shadow: 2px 2px #35b0e6;
+
+
     }
     .wrapper img{
         margin-left: 5%;
         width: 90%;
         height: auto;
         box-shadow: 5px 5px #4d4d4d;
-        border-top: 5px solid #aaa;
+        border-top: 6px solid #35b0e6;
+    }
 
-        
+    .main-content p{
+        height: 20%;
+        overflow:hidden;
     }
      article p{
         font-size: 18px;
@@ -69,17 +105,98 @@ background: #333;
         margin:0 5%;
 
     }
+article p:first-letter{
+    font-size: 2.5em;
+    letter-spacing: 3px;
+    }
     .sidebar{     
         margin-left: 25%;
     }
+.sidebar li{
+    font-family: serif;
 }
 
-@media (min-width: 800px){
+/*================Footer=============*/
+footer{
+height: 30px;
+background:#222;
+    text-align: center;
+    font-size:  .5em;
+    padding-top: 10px;
+}
+footer h4{
+    margin:0;
+}
+@media screen and (min-width: 730px) and (max-width: 899px){
+      
+    /*==============Header==============*/
+    header img{
+        margin-left: 12%;
+        margin-top: 2%;
+        height: 50%;
+        width: 70%;
+    }
+    header section{
+    width: 90%;
+    height: 100%;
+    background: url(../Img/madmax.jpg) no-repeat center;
+    background-size: cover;
+    margin-top: 15%;
+    box-shadow: 8px 7px #aaa;
+    }
+
+    /*=============Navigation+==========*/
+        nav{
+            margin-left: 5%;
+            
+        }
+    nav ul{
+        list-style: none;
+        height: auto;;
+        width: auto;
+    }
+    nav ul li{
+        background: #ee3635;
+        display: inline-block;
+        text-align: center;
+        margin-bottom: 0;
+        padding: .5em;
+        }
+        li a:link{
+        color:white;
+        text-decoration: none;
+        display: block;
+    }
+    li a:visited{
+        color:white;
+    }
+    li a:hover{
+            text-shadow: 5px 3px #35b0e6;
+    }
+    /*===============Content==============*/
+        .sidebar{
+        margin-top: 2%;
+        margin-right: 2%;
+        font-size: .78em;
+    }
+    .main-content article.column-5{
+    }
+    .main-content article.column-5:last-child{
+        float: left;
+        
+    }
+
+
+
+
+}
+
+@media screen and (min-width: 900px){
 
     /*============Hero==============*/    
 
     .hero section{
-    background: url(../Img/Hawke.jpg) no-repeat center;
+    background: url(../Img/madmax.jpg) no-repeat center;
     background-size: cover;
         height: 425px;
 
@@ -98,13 +215,16 @@ background: #333;
         margin: 0;
         font-size: 30px;
         margin-bottom: 10px;
-        width: 96%;
+        width: 109%;
 
 
     }
     nav ul li{
         float: left;
         Padding: 27px 20px 5px 20px;
+        box-shadow:none;
+        margin-bottom: 0;
+
 
     }
 
@@ -120,7 +240,20 @@ background: #333;
     }
 
     /*===============Content============*/
-
+    .sidebar{
+        margin-top:3%;
+        margin-right:0;
+    }
+    .sidebar ul{
+        font-size: .9em;
+        padding-top: 0;
+        margin-top: 0;
+    }
+    .sidebar h3{
+        margin-bottom: 4%;
+        margin-top:9%;
+    }
+   
     .wrapper {
         margin: 0 auto;
         width: 90%;
@@ -131,32 +264,19 @@ background: #333;
         margin-bottom: 0;
     }
     .wrapper img{
+
     }
     .secondary-content{
 
         margin: 0 auto;
-        padding: 0;
+        padding:0;
     }
     article img{
+        box-shadow: 10px 10px #aaa;
 
-        width: 100%;
-
-        border-top: 10px solid #35b0e6;
-        margin-top:
     }
     article p{
         font-size: 18px;
-        font-family: "Rockwell", serif;
     }
 }
-/*================Footer=============*/
-footer{
-height: 30px;
-background:#222;
-    text-align: center;
-    font-size:  .5em;
-    padding-top: 10px;
-}
-footer h4{
-    margin:0;
-}
+
