finished template for content pages and linked homepage/content page

--- a/css/Style.css
+++ b/css/Style.css
@@ -44,7 +44,7 @@ background: #333;
         background: #ee3635;
         display: block;
         text-align: center;
-        box-shadow: 8px 7px #aaa;
+        box-shadow: 8px 7px #748180;
         margin-bottom: 3%;
         padding: 1.2 em;
         }
@@ -76,7 +76,7 @@ background: #333;
     .sidebar h3{
         border-bottom: 5px solid #35b0e6;
         background: #35b0e6;
-        box-shadow: 5px 5px #aaa;
+        box-shadow: 5px 5px #748180;
         padding-left: 5%;
         font-size: 1.1em
     }
@@ -142,7 +142,7 @@ footer h4{
     background: url(../Img/madmax.jpg) no-repeat center;
     background-size: cover;
     margin-top: 15%;
-    box-shadow: 8px 7px #aaa;
+    box-shadow: 8px 7px #748180;
     }
 
     /*=============Navigation+==========*/
@@ -210,7 +210,7 @@ footer h4{
 
         background-color: #ee3635;
         list-style: none;
-       box-shadow: 8px 7px #aaa;
+       box-shadow: 8px 7px #748180;
         height: 80px;
         margin: 0;
         font-size: 30px;
@@ -272,7 +272,7 @@ footer h4{
         padding:0;
     }
     article img{
-        box-shadow: 10px 10px #aaa;
+        box-shadow: 10px 10px #748180;
 
     }
     article p{
