--- a/css/story-style.css
+++ b/css/story-style.css
@@ -2,7 +2,7 @@ html {
     box-sizing: border-box;
     color: white;
     font-size: 18px;
-    font-size: 1.5em;
+    font-size: 1em;
 font-family: 'Righteous', cursive;
 
 }
@@ -17,6 +17,7 @@ background: #333;
 }
 h1{
     margin-bottom:0;
+    font-size: 3em;
 }
 h3{ margin-top:0;
     text-align: right
@@ -31,11 +32,14 @@ h3{ margin-top:0;
         height: 100px;
 
     }
+nav ul li:first-child{
+    padding-top: .7%;
+}
     nav ul li{
-        background: #ee3635;
+        background: #35b0e6;
         display: block;
         text-align: center;
-        box-shadow: 8px 7px #aaa;
+        box-shadow: 8px 7px #748180;
         margin-bottom: 3%;
         padding: 1.2 em;
         }
@@ -70,9 +74,9 @@ footer h4{
     /*=======Navigation==============*/
     nav ul{
 
-        background-color: #ee3635;
+        background-color: #35b0e6;
         list-style: none;
-       box-shadow: 8px 7px #aaa;
+       box-shadow: 8px 7px #748180;
         height: 80px;
         margin: 0;
         font-size: 30px;
@@ -90,9 +94,8 @@ footer h4{
 
     }
     nav ul li img{
-        width: 30%;
+        width: 25%;
         margin-top: -10px;
-        margin-left: -0px;
         display: inline;
     }
 
@@ -107,8 +110,31 @@ footer h4{
             text-shadow: 5px 3px #35b0e6;
     }
 /*==============Content============*/
+    
+    .title{
+        margin-top: -20%;
+        margin-left: 40%;
+        margin-bottom: 5%;
+        border-top: 5px solid #35b0e6;
+        background: #748180;
+        box-shadow: 5px 5px 4px #000;
+        padding: 2%;
+        
+    }
+    
     article p{
         float: right;
+    }
+    
+    .content h2{
+      border-bottom: 5px solid #35b0e6;
+        margin-bottom: 0;
+        padding-bottom: 2%;
+        text-shadow: 3px 3px 3px #000;
+    }
+    
+    .content p{
+        font-size: 1.2em
     }
 /*==============Sidebar============*/
     .sidebar{
